# E-commerce_Core_API

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  commands.txt  dev-requirements.txt  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  structure.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1575d40ca19b_add_orders_tables.py  4d3a288ebf04_initial_schema.py  788c3d721d6f_create_users_table.py  98848a648c3a_initial_schema_users_catalog_product_.py  c1edb345f74c_add_payments_table.py  d48c3e83618a_add_indexes_for_products_listing.py
app/: db.py  main.py
app/api/: deps.py
app/api/routers/: admin_catalog.py  admin_orders.py  auth.py  health.py  orders.py  products.py  users.py
app/api/services/: orders.py  payments.py
app/core/: cache.py  config.py  security.py
app/models/: __init__.py  catalog.py  order.py  payment.py  user.py
app/schemas/: __init__.py  catalog.py  order.py  payment.py  user.py
docker/: api.Dockerfile
scripts/: seed_demo_data.py
tests/: conftest.py
tests/api/: test_admin_media_inventory.py  test_auth.py  test_products.py  test_products_detail.py
