[project]
name = "ecommerce-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "python-json-logger>=2.0.7",
]

[tool.ruff]
line-length = 100
select = ["E","F","I"]
